--- a/PAGES/1c_vscode/index.html
+++ b/PAGES/1c_vscode/index.html
@@ -2588,7 +2588,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Features and Keyboard Shortcuts</h2></p>
-<p>We present several keyboard shortcuts and handy features for <a href="https://code.visualstudio.com/">VS Code</a>. Remarkably, several of these features can be used regardless of the programming language you&#39;re running. Each feature discussed includes a gif for a visual illustration. Simply click &quot;Example&quot; to see them in action, or alternatively press  <kbd> Alt+🠙</kbd> or  <kbd> Alt+🠛</kbd> to open and close all of them simultaneously.</p>
+<p>We present a few handy features and keyboard shortcuts for <a href="https://code.visualstudio.com/">VS Code</a>. Remarkably, several of them can be used regardless of the programming language you&#39;re running. </p>
+<p>Each feature discussed includes a gif for a visual illustration. Simply click &quot;Example&quot; to see them in action, or alternatively press  <kbd> Alt+🠙</kbd> or  <kbd> Alt+🠛</kbd> to open and close all of them simultaneously.</p>
 <div class="vscode_bullets"><p> <h4> To run a script </h4>  Select the script to be executed and press  <kbd> Ctrl+Enter</kbd>  <div class="gif_drop"> <details><summary> Example  </summary>
     <p> <img style="width:60%;height:60%;" src="/julia_book/assets/PAGES/1c_vscode/pics/ex09.gif"/>
     </p></details></div> </p>
@@ -2646,7 +2647,7 @@ color: white;
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified September 4, 2024 
+          © Martin Alfaro <br>Last Modified September 6, 2024 
       </span> 
   </div> 
 </footer>
