--- a/index.html
+++ b/index.html
@@ -2095,7 +2095,7 @@ color: white;
         <h2>Welcome to the Site!</h2></p>
 <p><span style="color: rgb(168, 50, 50);"><strong>The website is still work in progress in terms of writing, content, and subjects covered</strong></span>. </p>
 <p>The chapters included so far can be found <a href="/julia_book/list_posts/">here</a>. I&#39;ll continue adding new content as I go.</p>
-<p>If you find any mistakes, typos, or have any suggestions, please open an issue on the <a href="https://github.com/alfaromartino/julia_book/issues">book&#39;s GitHub page</a>. Your feedback is greatly appreciated&#33;</p>
+<p>If you find any mistakes, typos, or have any suggestions, please open an issue on the <a href="https://github.com/alfaromartino/julia_book/issues">book&#39;s GitHub page</a>.<br/>Your feedback is greatly appreciated&#33;</p>
 <p>      </div>
     </div>
   </div>
@@ -2255,7 +2255,7 @@ color: white;
       <span class="ctrl-text">( <kbd>Ctrl + 🠚</kbd> )</span>
       <img src="/julia_book/assets/icons/next-page.png"
       style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-  <span class="center-text">  © Martin Alfaro <br>Last Modified September 4, 2024 </span>  
+  <span class="center-text">  © Martin Alfaro <br>Last Modified September 6, 2024 </span>  
 </div>
 <!-- </p>  -->
 </footer>
