--- a/PAGES/1a_installation/index.html
+++ b/PAGES/1a_installation/index.html
@@ -2611,8 +2611,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Installing an Editor</h2></p>
-<p>Once Julia is installed, you&#39;ll need an editor to write scripts and view outputs. There are numerous alternatives in this respect. <strong>Our website supposes that you use</strong> <a href="https://code.visualstudio.com/"><strong>Visual Studio Code</strong></a> <strong>(aka VS Code)</strong>, which is free, officially supported by Julia, and runs on any operating system &#40;i.e., Windows, macOS, and Linux&#41;. One of the key benefits of VS Code also is the possibility of installing plugins to extend the editor&#39;s capabilities. In fact, you&#39;ll need the  <em>Julia Language Support</em> plugin for operating Julia.</p>
-<p>Links to other popular editors can be found in <a href="/julia_book/links/">Useful Links</a>, including Vim, Emacs, NotePad, and Sublime. These editors are officially supported by Julia &#40;except Sublime&#41;. I recommend getting proficient in either VS Code or one of these alternatives. In this way, you&#39;ll be able <strong>to master a single tool for coding in multiple programming languages</strong>.</p>
+<p>Once Julia is installed, you&#39;ll need an editor to write scripts and view outputs. There are numerous alternatives in this respect. <strong>Our website supposes that you use</strong> <a href="https://code.visualstudio.com/"><strong>Visual Studio Code</strong></a> <strong>(aka VS Code)</strong>, which is free, officially supported by Julia, and runs on any operating system &#40;i.e., Windows, macOS, and Linux&#41;. One of the key benefits of VS Code also is the possibility of installing plugins to extend the editor&#39;s capabilities. In fact, you&#39;ll need to add the  <em>Julia Language Support</em> plugin for running Julia.</p>
+<p>Links to other popular editors can be found on <a href="/julia_book/links/">Useful Links</a>, including Vim, Emacs, NotePad, and Sublime. These editors are officially supported by Julia &#40;except Sublime&#41;. I strongly recommend getting proficient in either VS Code or one of these alternatives. In this way, you&#39;ll be able <strong>to master a single tool for coding in multiple programming languages</strong>.</p>
  <div class=warning>  <div class=title>  <span class="warning_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/warning.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
       <b>Warning!</b> </span>  </div>  <div class=content>     Avoid getting used to specialized editors built for one particular language, such as RStudio for R &#40;or its newer version <a href=" https://posit.co/"> Posit</a>&#41;. The editors I mentioned were designed for coding, regardless of the programming language you choose. Mastering a general code editor will enhance your coding skills—you&#39;ll be able to apply the same tools and keyboard shortcuts to every language you work with.  </div>  </div>
@@ -2625,8 +2625,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Installing R and Python (<strong><i>OPTIONAL</i></strong>)</h2></p>
-<p>Julia allows you to seamlessly integrate with other programming languages, including R and Python. For instance, you could export some data to R/Python, perform some operations, and then import the result back into Julia. This interoperability is particularly useful when a function is available in R or Python, but not in Julia. See <a href="/julia_book/links/">Useful Links</a> in case you want to install R or Python.</p>
-<p>If you&#39;re familiar with R and Python, you may find <a href="https://docs.julialang.org/en/v1/manual/noteworthy-differences/">this note</a> helpful. It outlines the main differences between them and Julia. Additionally, the following <a href="https://cheatsheets.quantecon.org/">cheat sheet</a> indicates the main syntax differences between Matlab, Python, and Julia.</p>
+<p>Julia allows for seamless integration with other programming languages, including R and Python. For example, you can export data to R or Python from Julia, perform specific operations, and then import the results back into Julia. This interoperability is particularly useful when a desired function is available in R or Python but not in Julia.</p>
+<p>If you&#39;re familiar with R and Python, you may find <a href="https://docs.julialang.org/en/v1/manual/noteworthy-differences/">this note</a> helpful. It outlines noteworthy differences between these languages and Julia. Additionally, see the following <a href="https://cheatsheets.quantecon.org/">cheat sheet</a> For a quick reference on the syntax differences in Matlab, Python, and Julia.</p>
 <p>      </div>
     </div>
   </div>
@@ -2636,7 +2636,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Julia's Resources for Help</h2></p>
-<p>There are two official resources you can use to learn Julia.</p>
+<p>There are two official resources for learning Julia.</p>
 <ol>
 <li><p><a href="https://docs.julialang.org/en/v1/">Julia&#39;s official documentation</a>. Written by Julia&#39;s developers.</p>
 </li>
@@ -2670,7 +2670,7 @@ this is invisible this is invisible this is invisible this is invisible this is 
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified September 4, 2024 
+          © Martin Alfaro <br>Last Modified September 6, 2024 
       </span> 
   </div> 
 </footer>
