--- a/PAGES/2c_strings/index.html
+++ b/PAGES/2c_strings/index.html
@@ -470,12 +470,19 @@ section a:hover{
                 This is just notation, and the symbols <code>&lt;</code> and <code>&gt;</code> should not be misconstrued as Julia's syntax.
             </div>
             <div class="modal-header">
-                <h2> PAGE ZOOM</h2>
+                <h2> PAGE LAYOUT </h2>
             </div>
                 <div class="modal-body">
                     If you want to adjust the size of the font, <b>zoom in or out on pages</b> by respectively using <kbd>Ctrl</kbd>+<kbd>+</kbd> and <kbd>Ctrl</kbd>+<kbd>-</kbd>. The layout will adjust automatically. <br>
                 <span class="brmine"></span>
-            </div>            
+            </div>
+            <div class="modal-header">
+                <h2> LINKS TO SECTIONS </h2>
+            </div>
+                <div class="modal-body">
+                    To quickly access a specific section of this page, simply hover over the title of the desired section and click on it. The relevant link will be automatically copied to your clipboard, which you can then paste.
+                <span class="brmine"></span>
+            </div>
             <div class="modal-header">
                 <h2> KEYBOARD SHORTCUTS</h2>
             </div>
@@ -2624,8 +2631,8 @@ z  &#61; &#39;🐒&#39;       # z equals the character 🐒</code></pre>
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Strings</h2> </p>
-<p>We&#39;ll rarely use the type <code>Char</code> directly. Instead, we&#39;ll mostly work with the type <code>String</code>. This is formally defined as an ordered collection of characters, and is employed to represent text.</p>
-<p>Strings can be defined through either double quotes <code>&quot; &quot;</code> or triple quotes <code>&quot;&quot;&quot; &quot;&quot;&quot;</code>. The latter is particularly convenient for handling newlines, making it relevant for strings spanning multiple lines. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> For more on the differences between double and triple quotes, see <a href="https://docs.julialang.org/en/v1/manual/strings/#Triple-Quoted-String-Literals">here</a>  </span></span></p>
+<p>We&#39;ll rarely use the type <code>Char</code> directly. Instead, we&#39;ll work with the type <code>String</code>, which is an ordered collection of characters. This type is employed to represent text.</p>
+<p>Strings can be defined through either double quotes <code>&quot; &quot;</code> or triple quotes <code>&quot;&quot;&quot; &quot;&quot;&quot;</code>. The latter is particularly convenient for handling newlines, such as when the text has to span multiple lines. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> For more on the differences between double and triple quotes, see <a href="https://docs.julialang.org/en/v1/manual/strings/#Triple-Quoted-String-Literals">here</a>  </span></span></p>
  <div class=" code_box"> <details  open><summary> Code  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">x &#61; &quot;Hello, beautiful world&quot;
 
