--- a/list_posts/index.html
+++ b/list_posts/index.html
@@ -450,12 +450,19 @@ section a:hover{
                 This is just notation, and the symbols <code>&lt;</code> and <code>&gt;</code> should not be misconstrued as Julia's syntax.
             </div>
             <div class="modal-header">
-                <h2> PAGE ZOOM</h2>
+                <h2> PAGE LAYOUT </h2>
             </div>
                 <div class="modal-body">
                     If you want to adjust the size of the font, <b>zoom in or out on pages</b> by respectively using <kbd>Ctrl</kbd>+<kbd>+</kbd> and <kbd>Ctrl</kbd>+<kbd>-</kbd>. The layout will adjust automatically. <br>
                 <span class="brmine"></span>
-            </div>            
+            </div>
+            <div class="modal-header">
+                <h2> LINKS TO SECTIONS </h2>
+            </div>
+                <div class="modal-body">
+                    To quickly access a specific section of this page, simply hover over the title of the desired section and click on it. The relevant link will be automatically copied to your clipboard, which you can then paste.
+                <span class="brmine"></span>
+            </div>
             <div class="modal-header">
                 <h2> KEYBOARD SHORTCUTS</h2>
             </div>
