--- a/PAGES/1d_tips/index.html
+++ b/PAGES/1d_tips/index.html
@@ -2622,9 +2622,9 @@ color: white;
 <p>Avoiding abbreviations has the additional benefit of making it easier to substitute expressions. For instance, suppose you name a variable <code>re</code>, and later decide to replace it with a different name. Then, the substitution process becomes more challenging, as the search will also capture functions like <code>replace</code> and <code>repeat</code>.</p>
 <p>Finally, using descriptive names reduces the need for comments. If the code is self-explanatory, comments become only necessary for exceptionally complex code or clarifications that go beyond what&#39;s written. </p>
  <h4> Indent and Align your Code </h4>
-<p>The way to implement this suggestion was already covered in the <a href="/julia_book/PAGES/1c_vscode/#keyboard_shortcuts">previous section</a>. For further details, you should consult that section.</p>
-<p>VS Code indents code automatically if you type code sequentially. Alternatively, you can format code by selecting some text, pressing down  <kbd> Ctrl</kbd>, then pressing  <kbd> k</kbd>, and then  <kbd> f</kbd>.  You can also directly format the whole script by pressing  <kbd> Alt</kbd> &#43;  <kbd> Shift</kbd> &#43;  <kbd> L</kbd>. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> Unlike Python, Julia only uses indentation for readability purposes. It doesn&#39;t affect how the code is interpreted before being executed.  </span></span> </p>
-<p>To illustrate this, consider the following &#40;somewhat exaggerated&#41; example.</p>
+<p>The implementation details of this suggestion has already been covered in the <a href="/julia_book/PAGES/1c_vscode/#keyboard_shortcuts">previous section</a>. For further details, please refer to that section.</p>
+<p>When writing code sequentially, VS Code automatically provides indentation. You can also format a selected portion of code by pressing  <kbd> Ctrl</kbd> &#43;  <kbd> k</kbd>, followed by  <kbd> f</kbd>. Alternatively, to format the entire script, use the shortcut  <kbd> Alt</kbd> &#43;  <kbd> Shift</kbd> &#43;  <kbd> L</kbd>. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> Unlike Python, Julia only uses indentation for readability purposes. It doesn&#39;t affect how code should be executed.  </span></span> </p>
+<p>To illustrate how this feature improves readability, consider the following &#40;somewhat exaggerated&#41; example.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2657,7 +2657,7 @@ end</code></pre>
 <p></div></div> 
  </div></div>
 <p>  </p></details></div>
-<p>I also suggest aligning code blocks. There are several plugins for doing this in VS Code, such as  <em>Better Align</em> and  <em>Cursor Align</em>. The readability gains are significant, as the example below shows. </p>
+<p>To further improve readability, I suggest also aligning code blocks. Several plugins in VS Code can assist with this task, such as &quot;Better Align&quot; and &quot;Cursor Align&quot;. Their use is demonstrated below.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
