--- a/PAGES/2b_scalars/index.html
+++ b/PAGES/2b_scalars/index.html
@@ -2595,7 +2595,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>The previous section introduced the concept of variables, distinguishing between those containing a single element &#40;known as scalars&#41; and collections. This section expands on scalars, exclusively focusing on those holding numbers.</p>
+<p>The previous section introduced the concept of variables, distinguishing between those containing a single element &#40;scalars&#41; and collections. This section expands on scalars, exclusively focusing on those holding numberic values.</p>
 <p>      </div>
     </div>
   </div>
@@ -2605,8 +2605,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Numbers</h2></p>
-<p>Computers store numbers in different formats, treating integers and decimal numbers as separate entities. Even within each category, multiple representations emerge, depending on the aimed level of precision. This precision formally reflects the number of bits allocated in memory to store a number, which in turn establishes the maximum range of values supported by a data type. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> For instance, the so-called 8-bit integer is limited to representing values between –128 to 127. Likewise, a 32-bit floating-point number, which is used for decimal numbers, can represent up to 7 significant digits of precision.  </span></span> These features extend well beyond Julia, and are intrinsic to how computers operate at a fundamental level. </p>
-<p>In modern computers, numeric types have a default precision of 64 bits. These objects are defined in Julia as:</p>
+<p>Computers store numbers in different formats, treating integers and decimal numbers as separate entities. Even within a category, multiple representations emerge, depending on the aimed level of precision. The precision of a number is determined by the number of bits allocated in memory to store it, which in turn defines the maximum range of values supported by a data type. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> For instance, the so-called 8-bit integer is limited to representing values between –128 to 127. Likewise, a 32-bit floating-point number, which is used for decimal numbers, can represent up to 7 significant digits of precision.  </span></span> These features extend well beyond Julia, and are intrinsic to how computers operate at a fundamental level. </p>
+<p>In modern computers, numeric types typically have a default precision of 64 bits. These objects are defined in Julia as:</p>
 <ul>
 <li><p><code>Int64</code> for integers.</p>
 </li>
@@ -2615,7 +2615,7 @@ color: white;
 </ul>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
-      <b> Remark</b> </span>  </div>  <div class=content>     You can simply use <code>Int</code> as a shorthand for <code>Int64</code>. In fact, <code>Int</code> is more versatile, as it adapts to your computer&#39;s architecture, setting the default integer type as <code>Int64</code> or <code>Int32</code>. As most modern machines operate on a 64-bit architecture, <code>Int</code> typically defaults to <code>Int64</code>.  </div>  </div>
+      <b> Remark</b> </span>  </div>  <div class=content>     Julia provides the type <code>Int</code> as a more versatile option than <code>Int64</code>, as it adapts to your computer&#39;s architecture. Specifically, <code>Int</code> defaults to <code>Int64</code> on 64-bit systems and <code>Int32</code> on 32-bit systems. Since most modern machines operate on a 64-bit architecture, <code>Int</code> typically defaults to Int64. Note that there&#39;s no equivalent adaptive type <code>Float</code> for floating-point numbers. Instead, Julia takes <code>Float64</code> as the default floating-point type.  </div>  </div>
 <p>It&#39;s worth emphasizing that <code>Int64</code> and <code>Float64</code> are two different data types.  Thus, while <code>1</code> is a value with type <code>Int64</code>, the same number becomes <code>1.0</code> as a <code>Float64</code> type.</p>
  <div class=" code_box"> <details  open><summary> Code  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">x &#61; 1       # &#96;Int64&#96;
@@ -2633,7 +2633,7 @@ y &#61; 1_000_000             # equivalent to &#96;x&#96; and more readable
 x &#61; 1000000.24            
 y &#61; 1_000_000.24          # &#39;_&#39; can be used with decimal numbers</code></pre>
 <p></div> </div>  </details></div>  </div>  </div>
-<p>The type <code>Float64</code> includes not only decimal numbers, but also two special values: <code>Inf</code> for infinity, and <code>NaN</code> for indeterminate expressions such as 0/0 &#40;<code>NaN</code> stands for &quot;not a number&quot;&#41;. Considering this, all the following variables have type <code>Float64</code>.</p>
+<p>The type <code>Float64</code> encompasses not only decimal numbers, but also two special values: <code>Inf</code> for infinity, and <code>NaN</code> for indeterminate expressions such as 0/0 &#40;<code>NaN</code> stands for &quot;not a number&quot;&#41;. Considering this, all the following variables are of type <code>Float64</code>.</p>
  <div class=" code_box"> <details  open><summary> Code  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">x &#61; 2.5
 
@@ -2650,8 +2650,8 @@ z &#61; 0/0</code></pre>
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Boolean Variables</h2></p>
-<p>A particular numeric type is <code>Bool</code>, which enables the representation of <span style="color: rgb(62, 121, 180);"><strong>Boolean variables</strong></span>. These variables can only assume the values <code>true</code> and <code>false</code>. Internally, they&#39;re implemented as integers, with <code>true</code> and <code>false</code> respectively equivalent to <code>1</code> and <code>0</code>. As a result, Julia accepts <code>1</code> and <code>0</code> interchangeably with <code>true</code> and <code>false</code>.</p>
-<p>Boolean expressions arise whenever conditions are evaluated, such as determining whether a number exceeds another or whether a string matches a specific pattern. These conditional evaluations yield Boolean values, which can then be employed to control the flow of our program. Some examples of Boolean values are presented below.</p>
+<p>A distinct numeric type is <code>Bool</code>, which facilitates the representation of <span style="color: rgb(62, 121, 180);"><strong>Boolean variables</strong></span>. These variables can only take on the values <code>true</code> and <code>false</code>. Internally, they&#39;re implemented as integers, with <code>true</code> and <code>false</code> respectively equivalent to <code>1</code> and <code>0</code>. Due to this property, Julia accepts <code>1</code> and <code>0</code> interchangeably with <code>true</code> and <code>false</code>.</p>
+<p>Boolean expressions arise when conditions are evaluated, such as determining whether a number exceeds a value or whether a string matches a specific pattern. These conditional evaluations yield Boolean values, which can then be employed to control the program&#39;s flow. Some examples of Boolean values are presented below.</p>
  <div class=" code_box"> <details  open><summary> Code  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">x &#61; 2
 y &#61; 1
@@ -2668,7 +2668,7 @@ z &#61; x &gt; y         # alternative notation &#40;potentially confusing, note
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Arithmetic Operators</h2></p>
-<p>Numbers can be manipulated through a variety of <strong>arithmetic operators</strong>. These operators are represented by familiar symbol, akin to those found in other programming languages.</p>
+<p>Numbers can be manipulated through a variety of <strong>arithmetic operators</strong>. These operators are represented by familiar symbols, akin to those commonly found in other programming languages.</p>
 <p>
 <style type="text/css">
 .tg  {border-collapse:collapse;border-spacing:0;}
@@ -2736,7 +2736,7 @@ z &#61; x &gt; y         # alternative notation &#40;potentially confusing, note
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified September 6, 2024 
+          © Martin Alfaro <br>Last Modified September 7, 2024 
       </span> 
   </div> 
 </footer>
